--- a/frontend/src/app/(dashboard)/page.css
+++ b/frontend/src/app/(dashboard)/page.css
@@ -9,3 +9,24 @@
 .selected-background {
   background-color: #695E5E;
 }
+
+
+.page-transition {
+  transition: transform 0.5s ease-in-out;
+}
+
+.page-transition-enter {
+  transform: translateY(100%);
+}
+
+.page-transition-enter-active {
+  transform: translateY(0);
+}
+
+.page-transition-exit {
+  transform: translateY(0);
+}
+
+.page-transition-exit-active {
+  transform: translateY(-100%);
+}
